Modificado .gitignore para ignorar WFSTool de la china

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-WFSTool/playrec/
+﻿WFSTool/playrec/
 WFSTool_Rub/images/
 WFSTool/images/
 K-Wave
+WFSTool - 副本
 RIR-Generator-master
 Data/
 */image
